@@ -11,6 +11,7 @@ Changes for 2.2.1rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7037] added agent.hostname to the list of supported items (Pavels)
 ..F....... [ZBX-7317] removed unused code in popup.php (Ivo)
 
 --------------------------------------------------------------------------------
